# rules_dotnet_wpf

./: .bazelrc  .gitignore  README.md  WORKSPACE
HelloWorld/: BUILD.bazel  Form1.Designer.cs  Form1.cs  HelloWorld.csproj  HelloWorld.sln  Program.cs
HelloWorld/Properties/: AssemblyInfo.cs
HelloWorldLib/: BUILD.bazel  HelloWorldLib.csproj  HelloWorldLib.sln  UserControl1.xaml  UserControl1.xaml.cs
HelloWorldLib/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
