load("@rules_dotnet//dotnet:defs.bzl", "csharp_binary")

csharp_binary(
    name = "HelloWorld",
    srcs = glob([
        "*.cs",
    ]),
    internals_visible_to = [],
    visibility = ["//visibility:public"],
    deps = [
    ],
    target_frameworks = ["net48"],
    targeting_packs = [
        "@paket.net48//microsoft.netframework.referenceassemblies.net48",
    ],
    target_compatible_with = [
        "@platforms//os:windows",
    ],
)
